--- a/package.json
+++ b/package.json
@@ -6,17 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
+    "@popperjs/core": "^2.11.8",
+    "@prisma/client": "^6.4.1",
+    "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.3",
+    "next": "15.1.7",
+    "next-auth": "^4.24.11",
+    "next-intl": "^3.26.5",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "prisma": "^6.4.1",
+    "typescript": "^5"
   }
 }
