--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@prisma/client": "^6.4.1",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
-    "next": "15.1.7",
+    "next": "14.0.4",
     "next-auth": "^4.24.11",
-    "next-intl": "^3.26.5",
+    "next-intl": "3.4.1",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "react": "18.2.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
+    "sass": "^1.85.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
