--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bootstrap": "^5.3.3",
     "next": "14.0.4",
     "next-auth": "^4.24.11",
-    "next-intl": "3.4.1",
+    "next-intl": "^3.26.5",
     "next-themes": "^0.4.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.10.9",
