--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.3",
     "sass": "^1.85.0"
   },
   "devDependencies": {
